# anonklub

./: .barrelsby.json  .biome.jsonc  .dockerignore  .dprint.jsonc  .env.example  .envrc.example  .eslintignore  .eslintrc.yaml  .gitignore  .gitmodules  .knip.ts  .lefthook.yml  .lintstagedrc.json  .prettierignore  .prettierrc.yaml  .tool-versions  Cargo.toml  LICENSE  README.md  biome.jsonc  commitlint.config.js  foundry.toml  global.d.ts  jest.common.ts  jest.config.ts  jest.lint.ts  jest.prettier.ts  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  sweep.yaml  tile.txt  tree.json  tsconfig.json  turbo.json
.changeset/: afraid-carrots-exist.md  brown-pumpkins-sip.md  chilly-actors-turn.md  config.json  cyan-pigs-rescue.md  famous-rice-teach.md  forty-countries-pull.md  friendly-hairs-pull.md  giant-peaches-fly.md  healthy-maps-carry.md  heavy-games-pretend.md  honest-baboons-relate.md  hungry-numbers-film.md  large-bulldogs-shake.md  late-llamas-think.md  lovely-knives-approve.md  many-rivers-listen.md  many-zoos-sip.md  nasty-ties-jump.md  neat-chairs-cry.md  nervous-jobs-compete.md  odd-fans-mate.md  pink-brooms-share.md  pink-lamps-rest.md  serious-flowers-own.md  short-cows-shake.md  short-cups-invent.md  smooth-suns-hope.md  spotty-cows-buy.md  stupid-crews-sniff.md  tame-jokes-tickle.md  tender-toys-smoke.md  yellow-turtles-stare.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  pre-commit  pre-push
circom/: membership.circom  package.json  tsconfig.json
circuits/spartan/: Cargo.toml  package.json  wasmBytes.js
circuits/spartan/scripts/: compile-web.sh
circuits/spartan/src/: eth_membership.rs  lib.rs  utils.rs
circuits/spartan/wasm-pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
contracts/: .solhint.json  .solhintignore  README.md  package.json
demo/: README.md  package.json  tsconfig.json
discord-bot/: Dockerfile  README.md  fly-prod.toml  fly-staging.toml  package.json  tsconfig.compile.json  tsconfig.json
docs/: docusaurus.config.js  package.json  sidebars.js
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
membership/: package.json  (+1 more)
(+921 files in other folders)
