[workspace]
resolver = "2"
default-members = ["pkgs/cli"]
members = [
  "pkgs/binary-merkle-tree-halo2",
  "pkgs/cli",
  "pkgs/halo2-binary-merkle-tree",
  "pkgs/halo2-ecdsa",
  "pkgs/halo2wrong-ecdsa",
  "pkgs/merkle-tree-wasm",
  "pkgs/spartan-ecdsa-wasm",
]

[profile.release]
lto = true
opt-level = 3
