[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-secq256k1 = "0.4.0"
ethers = "2.0.11"
num-bigint = "0.4.4"
sapir = { git = "https://github.com/personaelabs/sapir.git", features = [
    "profiler",
], branch = "main" }
wasm-bindgen = "0.2.89"

[profile.release]
lto = true
opt-level = 3
