[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-secq256k1 = "0.4.0"
ark-serialize = "0.4.2"
ethers = "2.0.11"
num-bigint = "0.4.4"
sapir = { git = "https://github.com/personaelabs/sapir.git", features = [
    "profiler",
], branch = "main" }
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"
merkle_tree_wasm = { path = "../../merkle_tree_wasm" }

[profile.release]
lto = true
opt-level = 3